--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -8,6 +8,7 @@ body {
     line-height: 1.5;
     font-weight: bold;
     background-image: url(https://static.vecteezy.com/system/resources/previews/000/588/674/original/floral-seamless-pattern-flower-background-flourish-wallpaper-with-flowers-vector.jpg);
+    background-blend-mode:darken;
 }
 
 header {
@@ -43,10 +44,10 @@ section {
 
 #navbar {
     position: fixed;
-    min-width: 290px;
+    min-width: 190px;
     top: 0px;
     left: 0px;
-    width: 300px;
+    width: 200px;
     height: 100%;
     border-right: 3px solid;
     border-color: rgba(0, 22, 22, 0.4);
@@ -84,6 +85,10 @@ section {
         color: white;
     }
 
+    .nav-header {
+        font-size: 40px;
+    }
+
 #main-doc {
     position: absolute;
     margin-left: 310px;
@@ -95,6 +100,8 @@ section {
     * {
         overflow-x: auto;
     }
+
+    
 }
 
 @media only screen and (min-device-width: 480px) 
@@ -102,7 +109,7 @@ section {
                    and (orientation: landscape) {
                 navbar {
                     position: fixed;
-                    min-width: 90px;
+                    min-width: 290px;
                     top: 0px;
                     left: 0px;
                     width: 100px;
